<?xml version="1.0"?>
<package>
  <name>s8_master</name>
  <version>0.0.0</version>
  <description>Robotics Master node</description>
  <maintainer email="unnar@kth.se">unnar</maintainer>
  <maintainer email="lwiener@kth.se">Lucas Wiener</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>s8_common_node</run_depend>
  <build_depend>s8_common_node</build_depend>
  <run_depend>s8_msgs</run_depend>
  <build_depend>s8_msgs</build_depend>
  <run_depend>s8_object_aligner</run_depend>
  <build_depend>s8_object_aligner</build_depend>
  <run_depend>actionlib</run_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>s8_explorer</run_depend>
  <build_depend>s8_explorer</build_depend>
  <run_depend>ras_msgs</run_depend>
  <build_depend>ras_msgs</build_depend>
</package>